<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="notification_sync_in_progress">Synchronising</string>
    <string name="notification_listen_for_events">Listen for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Redact</string>
    <string name="quote">Quote</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="speak">Speak</string>
    <string name="clear">Clear</string>
    <string name="later">Later</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="report_content">Report content</string>
    <string name="active_call">Active call</string>
    <string name="ongoing_conference_call">Ongoing conference call. Join as voice or video.</string>
    <string name="ongoing_conference_call_voice">voice</string>
    <string name="ongoing_conference_call_video">video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing…</string>
    <string name="missing_permissions_error">"Due to missing permissions, this action is not possible.</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this chat</string>
    <string name="missing_permissions_title_to_start_conf_call">Cannot start call</string>
    <string name="device_information">Device information</string>
    <string name="room_no_conference_call_in_encrypted_rooms">Conference calls are not supported in encrypted chats</string>
    <string name="send_anyway">Send Anyway</string>
    <string name="or">or</string>
    <string name="invite">Invite</string>
    <string name="offline">Offline</string>
    <string name="action_exit">Exit</string>
    <string name="actions">Actions</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation">For security, logging out will delete any end-to-end encryption keys making previous encrypted chat history unreadable if you log back in.\nSelect export to backup them before signing out.</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_global_search">Global search</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_historical">Historical</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="disable">Disable</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="bottom_action_home">Conversations</string>
    <string name="bottom_action_favourites">Favourites</string>
    <string name="bottom_action_people">People</string>
    <string name="bottom_action_contacts">My contacts</string>
    <string name="bottom_action_secret">Hidden conversations</string>
    <string name="bottom_action_calls">Calls</string>
    <string name="bottom_action_rooms">Chats</string>
    <string name="bottom_action_groups">Communities</string>
    <string name="home_filter_placeholder_home">Search for conversations</string>
    <string name="home_filter_placeholder_calls">Search for calls</string>
    <string name="home_filter_placeholder_contacts">Search for contacts</string>
    <string name="home_filter_placeholder_favorites">Search for favourites</string>
    <string name="home_filter_placeholder_people">Search for conversations</string>
    <string name="home_filter_placeholder_rooms">Search for chats</string>
    <string name="home_filter_placeholder_groups">Search for communities</string>
    <string name="invitations_header">Invites</string>
    <string name="low_priority_header">Low priority</string>
    <string name="system_alerts_header">"System Alerts"</string>
    <string name="direct_chats_header">Chats</string>
    <string name="local_address_book_header">Local address book</string>
    <string name="user_directory_header">User directory</string>
    <string name="matrix_only_filter">Matrix contacts only</string>
    <string name="no_conversation_placeholder">No conversations</string>
    <string name="no_contact_access_placeholder">You didn\'t allow KEDR to access your local contacts</string>
    <string name="no_result_placeholder">No results</string>
    <string name="rooms_header">Chats</string>
    <string name="rooms_directory_header">Chat directory</string>
    <string name="no_room_placeholder">No chats</string>
    <string name="no_public_room_placeholder">No public chats available</string>
    <plurals name="public_room_nb_users">
        <item quantity="one">1 user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="groups_invite_header">Invite</string>
    <string name="groups_header">Communities</string>
    <string name="no_group_placeholder">No groups</string>
    <string name="send_bug_report_include_logs">Send logs</string>
    <string name="send_bug_report_include_crash_logs">Send crash logs</string>
    <string name="send_bug_report_include_screenshot">Send screenshot</string>
    <string name="send_bug_report">Bug Report</string>
    <string name="send_bug_report_description">Please describe the bug. What did you do? What did you expect to happen? What actually happened?</string>
    <string name="send_bug_report_description_in_english">If possible, please write the description in English.</string>
    <string name="send_bug_report_placeholder">Describe your problem here</string>
    <string name="send_bug_report_logs_description">In order to diagnose problems, logs from this client will be sent with this bug report. This bug report, including the logs and the screenshot, will not be publicly visible. If you would prefer to only send the text above, please untick:</string>
    <string name="send_bug_report_alert_message">You seem to be shaking the phone in frustration. Would you like to submit a bug report?</string>
    <string name="send_bug_report_app_crashed">The application has crashed last time. Would you like to submit a crash report?</string>
    <string name="send_bug_report_rage_shake">Rage shake to report bug</string>
    <string name="send_bug_report_sent">The bug report has been successfully sent</string>
    <string name="send_bug_report_failed">The bug report failed to be sent (%s)</string>
    <string name="send_bug_report_progress">Progress (%s%%)</string>
    <string name="send_files_in">Send into</string>
    <string name="read_receipt">Read</string>
    <string name="join_room">Join Chat</string>
    <string name="username">Username</string>
    <string name="create_account">Register</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="hs_url">Home Server URL</string>
    <string name="identity_url">Identity Server URL</string>
    <string name="search">Search</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="start_voice_call">Start Voice Call</string>
    <string name="start_video_call">Start Video Call</string>
    <string name="option_send_voice">Send voice</string>
    <string name="start_new_chat_prompt_msg">Are you sure that you want to start a new chat with %s?</string>
    <string name="start_voice_call_prompt_msg">Are you sure that you want to start a voice call?</string>
    <string name="start_video_call_prompt_msg">Are you sure that you want to start a video call?</string>
    <string name="option_send_files">Send files</string>
    <string name="option_send_sticker">Send sticker</string>
    <string name="option_take_photo_video">Take photo or video</string>
    <string name="option_take_photo">Take photo</string>
    <string name="option_take_video">Take video</string>
    <string name="no_sticker_application_dialog_content">You don\'t currently have any stickerpacks enabled.\n\nAdd some now?</string>
    <string name="go_on_with">go on with…</string>
    <string name="error_no_external_application_found">Sorry, no external application has been found to complete this action.</string>
    <string name="auth_login">Login</string>
    <string name="auth_register">Registration</string>
    <string name="auth_submit">Submit</string>
    <string name="auth_skip">Skip</string>
    <string name="auth_send_reset_email">Send Reset Email</string>
    <string name="auth_return_to_login">Return to login screen</string>
    <string name="auth_user_id_placeholder">Email or user name</string>
    <string name="auth_password_placeholder">Password</string>
    <string name="auth_new_password_placeholder">New password</string>
    <string name="auth_user_name_placeholder">User name</string>
    <string name="auth_add_email_message">"Add an email address to your account to let users discover you, and let you reset password."</string>
    <string name="auth_add_phone_message">"Add a phone number to your account to let users discover you."</string>
    <string name="auth_add_email_phone_message">"Add an email address and/or a phone number to your account to let users discover you.\n\nEmail address will also let you reset your password."</string>
    <string name="people_search_invite_by_id"><u>Invite by ID</u></string>
    <string name="room_sliding_menu_settings">Settings</string>
    <string name="settings_change_password">Change password</string>
    <string name="invite_contacts">Invite contacts</string>
    <string name="register_label">Chat absolutely safe with fully encrypted messages.</string>
    <string name="invite_direct">Invite friend sending him download link to KEDR and my Username to start chat.</string>
    <string name="hide_message_preview">Hide message preview</string>
    <string name="show_message_in_notification">Show message in notification</string>
    <string name="ask_pin_code">Ask PIN-code on start</string>
    <string name="change_pin_code">Change PIN-code for current list</string>
    <string name="touch_id">Use Touch ID</string>
</resources>