<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- define an empty title else lint fails -->

    <item
        android:id="@+id/bottom_action_home"
        android:contentDescription="@string/bottom_action_home"
        android:enabled="true"
        android:icon="@drawable/tab_chats_active"
        android:title="" />

    <item
        android:id="@+id/bottom_action_calls"
        android:contentDescription="@string/bottom_action_calls"
        android:enabled="true"
        android:icon="@drawable/tab_calls_active"
        android:title="" />
    <item
        android:id="@+id/bottom_action_contacts"
        android:contentDescription="@string/bottom_action_contacts"
        android:enabled="true"
        android:icon="@drawable/tab_contacts_active"
        android:title="" />

    <item
        android:id="@+id/bottom_action_secret"
        android:contentDescription="@string/bottom_action_secret"
        android:enabled="true"
        android:icon="@drawable/tab_chats_hidden"
        android:title="" />

    <item
        android:id="@+id/bottom_action_settings"
        android:contentDescription="@string/room_sliding_menu_settings"
        android:enabled="true"
        android:icon="@drawable/tab_settings_active"
        android:title="" />
</menu>
