<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">

    <TextView
        android:id="@+id/search_invite_by_id"
        style="@style/ListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/people_search_invite_by_id"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/invite_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="2dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/invite"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/invite_contacts"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:paddingEnd="5dp"
                android:paddingStart="65dp"
                android:text="@string/invite_direct"
                android:textColor="@color/grey500"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ExpandableListView
        android:id="@+id/room_details_members_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/invite_contacts"
        android:divider="@android:color/transparent"
        android:dividerHeight="1px" />

    <RelativeLayout
        android:id="@+id/search_in_progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/waiting_background_color"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>